# par-lang

./: .cache.sqlite  .gitignore  1  Cargo.toml  MinimalTestExample.par  README.md  basic_program_structure.html  big_table.html  builtin.html  error_handling.html  expressions.html  getting_started.html  highlight.js  index.html  introduction.html  packages_and_modules_implementation_plan.md  packages_and_modules_proposal.md  print.html  process_syntax.html  searchindex.js  searchindex.json  test.par  toc.html  toc.js  types.html  types_and_expressions.html
.config/: lingo.dic  spellcheck.toml
.github/workflows/: ci.yml  release.yml
assets/: sw.js
crates/par-builtin/: Cargo.toml
crates/par-builtin/src/: builtin.rs  lib.rs
crates/par-builtin/src/builtin/: Builtin.par  NativeBuiltin.par  bench.rs  boxmap.rs  byte.rs  bytes.rs  char_.rs  console.rs  data.rs  debug.rs  float.rs  http.rs  int.rs  json.rs  list.rs  map.rs  nat.rs  number.rs  os.rs  parser.rs  string.rs  test.rs  time.rs  url.rs
crates/par-core/: Cargo.toml
crates/par-core/src/: api.rs  frontend_impl.rs  lib.rs  location.rs  par.rs  spawn.rs  test_assertion.rs  typed_readback.rs  workspace.rs
crates/par-core/src/backend/: compiler.rs  mod.rs
crates/par-core/src/backend/flat/: mod.rs  transpiler.rs
crates/par-core/src/backend/tree/: compiler.rs  mod.rs
crates/par-core/src/frontend_impl/: captures.rs  language.rs  lexer.rs  parse.rs  process.rs  program.rs
crates/par-core/src/frontend_impl/types/: assignability.rs  checking.rs  context.rs  core.rs  definitions.rs  dependencies.rs  display.rs  duality.rs  error.rs  expansion.rs  implicit.rs  lattice.rs  mod.rs  registry.rs  substitution.rs  tests.rs  validation.rs  visibility.rs  visit.rs
crates/par-core/src/par/: build_result.rs  captures.rs  language.rs  lexer.rs  parse.rs  process.rs  program.rs
crates/par-core/src/par/builtin/: Builtin.par  test.rs
crates/par-core/src/par/types/: checking.rs  context.rs  core.rs  definitions.rs  error.rs  implicit.rs  lattice.rs  mod.rs  substitution.rs  tests.rs  validation.rs  visit.rs
crates/par-core/src/runtime/: compiler.rs  executor.rs  mod.rs  readback.rs
crates/par-core/src/runtime/flat/: arena.rs  mod.rs  readback.rs  reducer.rs  runtime.rs  show.rs  transpiler.rs
crates/par-core/src/runtime/tree/: compiler.rs  mod.rs  net.rs
crates/par-doc/: Cargo.toml
crates/par-doc/assets/: site.css  site.js
crates/par-doc/src/: error.rs  html.rs  lib.rs  load.rs  model.rs  paths.rs  render.rs
crates/par-doc/templates/: base.html  module.html  module_content.html  package.html  packages.html
crates/par-runtime/: Cargo.toml
crates/par-runtime/src/: data.rs  executor.rs  fan_behavior.rs  lib.rs  linker.rs  poll.rs  primitive.rs  readback.rs  registry.rs
crates/par-runtime/src/flat/: arena.rs  mod.rs  readback.rs  reducer.rs  runtime.rs  show.rs
docs/: book.toml
docs/par-theme/: highlight.js
docs/src/: SUMMARY.md  basic_program_structure.md  big_table.md  builtin.md  error_handling.md  getting_started.md  introduction.md  process_syntax.md  types_and_expressions.md
docs/src/nondeterminism/: README.md  both_ways.md  fan_pattern.md  poll_submit.md  repoll.md
docs/src/processes/: chan_expression.md  commands.md  do_expression.md  duality.md
docs/src/quality_of_life/: README.md  error_handling.md  if.md  pipes.md
docs/src/structure/: definitions_and_declarations.md  let_expressions.md  packages_and_modules.md  primitive_types.md  strings_and_numbers.md
docs/src/sugar/: try_catch_throw.md
examples/: CopyFile.par  Deduplicate.par  Downloader.par  Echo.par  Fibonacci.par  HelloWorld.par  HttpGet.par  MiniGrep.par  Par.toml  PlaygroundChat.par  Queue.par  ReadLines.par  ReorderAsync.par  RockPaperScissors.par  Sokoban.par  StringManipulation.par  TestExample.par  WebServer.par  fibonacci.par
examples/Freestanding/: 00_pair_swap.par  01_red_test.par  02 Additive.par
examples/Nondeterminism/: FanIn.par  ReorderAsync.par  SourceFanIn.par
examples/src/: CopyFile.par  Deduplicate.par  Downloader.par  Echo.par  Fibonacci.par  HelloWorld.par  HttpGet.par  MiniGrep.par  PlaygroundChat.par  QS.par  Queue.par  RockPaperScissors.par  Sokoban.par  StringManipulation.par  TestExample.par  WebServer.par
expressions/: application.html
nondeterminism/: both_ways.html  fan_pattern.html  poll_submit.html  repoll.html
processes/: chan_expression.html  do_expression.html  duality.html
processes/commands/: looping_and_branching.html  receiving_where_it_shines.html  selecting_and_sending.html
quality_of_life/: error_handling.html  if.html  pipes.html
src/: location.rs  main.rs  package_builder.rs  package_loader.rs  package_manager.rs  package_utils.rs  par.rs  playground.rs  readback.rs  runtime.rs  sample_ic.par  spawn.rs  test.rs  test_assertion.rs  test_runner.rs  tokio_factory.rs  wasm_spawn.rs  workspace_support.rs
src/icombs/: compiler.rs  mod.rs  net.rs  net2.rs  readback.rs
src/language_server/: data.rs  feedback.rs  instance.rs  io.rs  server.rs
src/par/: build_result.rs  builtin.rs  captures.rs  language.rs  lexer.rs  parse.rs  primitive.rs  process.rs  program.rs  types.rs
src/playground/: app.rs  build.rs  mod.rs  readback.rs  run_menu.rs
src/runtime/: compiler.rs  mod.rs  readback.rs
structure/: definitions_and_declarations.html  let_expressions.html  packages_and_modules.html  primitive_types.html  strings_and_numbers.html
sugar/: try_catch_throw.html
tests/: Binary.par  Factorial.par  LoadQuicksort.par  Quicksort.par  Sieve.par  test1.par  test2.par  test3.par  test4.par
tests/Freestanding/: 00 Test.par  01 Multiplicatives.par  02 Additive.par  03 Exponential.par
tests/src/: Binary.par  CoreModernization.par  Factorial.par  InfixOperators.par  NumberData.par  Quicksort.par  Sieve.par  TemplateStrings.par  Test1.par  Test2.par  Test3.par  Test4.par
types/: box.html  choice.html  constraints.html  continuation.html  either.html  exists.html  forall.html  function.html  implicit_generics.html  iterative.html  pair.html  recursive.html  unit.html
(+91 files in other folders)
