[package]
name = "par-core"
version = "0.1.0"
edition = "2024"

[features]
# Kept for compatibility with existing cfgs in the codebase.
# This feature does not pull any UI deps; those stay in the application crate.
playground = []

[dependencies]
futures = { version = "0.3.31", features = ["executor", "thread-pool"] }
indexmap = "2.7.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "signal", "sync"] }
stacker = "0.1.19"
winnow = { version = "0.7.4", features = [] }
miette = { version = "7.6.0", features = ["fancy"] }
arcstr = "1.2.0"
num-bigint = "0.4.6"
unescaper = "0.1.6"
bytes = "1.6.1"
im = "15"
