[package]
name = "par-runtime"
version = "0.1.0"
edition = "2024"

[features]
playground=[]

[dependencies]
arcstr = "1.2.0"
futures = { version = "0.3.31", features = ["executor", "thread-pool"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
bytes = { version = "1.6.1", features = ["serde"] }
inventory = "0.3.22"
serde = { version = "1.0.228", features = ["derive", "rc"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "signal", "sync"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "io-util", "sync"] }
